# nss-llmnr

./: Makefile.am  Makefile.in  README  README.md  bootstrap.sh  config.h.in  configure  configure.ac
debian/: changelog  control  libnss-llmnr.lintian-overrides  libnss-llmnr.postinst  libnss-llmnr.postrm  rules  watch
doc/: Makefile.am  Makefile.in  README.html.in  style.css
src/: Makefile.am  Makefile.in  bsdnss.c  dns.c  dns.h  llmnr-test.c  map-file  nss-test.c  nss.c  query.c  query.h  util.c  util.h
